--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="menu">
         <img class="img1" src="img/image.png">
         <ul class="nav-links">
-            <li><a class="link1" href="Поддержка.html">Поддержка</a></li>
+            <li><a class="link1" href="index (6).html">Поддержка</a></li>
             <li><a class="link1" href="Дистрибуция.html">Дистрибуция</a></li>
         </ul>
         <div class="elementright">
