--- a/index (6).html
+++ b/index (6).html
@@ -14,8 +14,8 @@
         <nav class="menu">
             <img class="img1" src="img/image.png">
             <ul class="nav-links">
-                <li><a class="link1" href="Поддержка.html">Поддержка</a></li>
-                <li><a class="link1" href="#">Дистрибуция</a></li>
+                <li><a class="link1" href="index (4).html">Поддержка</a></li>
+                <li><a class="link1" href="index (2).html">Дистрибуция</a></li>
             </ul>
           <div class="elementright">
               <a href="Вход.html">
