--- a/index (4).html
+++ b/index (4).html
@@ -19,7 +19,7 @@
                 <li><a class="link1" href="Дистрибуция.html">Дистрибуция</a></li>
             </ul>
             <div class="elementright">
-                <a href="Вход.html">
+                <a href="index (1).html">
                     <img class="imguser" src="img/user.png">
                 </a>
             <div class="language-switcher">
